--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,16 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/makerjs@0/target/js/browser.maker.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bezier-js@2/bezier.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/opentype.js@0/dist/opentype.js"></script> -->
+
+    <script src="//at.alicdn.com/t/font_2856371_78crwemjfrh.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/makerjs@0/target/js/browser.maker.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/bezier-js@2/bezier.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/opentype.js@latest/dist/opentype.min.js" async></script>
+    <script src="//at.alicdn.com/t/font_2856371_kckym4vi1h.js" async></script>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
